[package]
name = "rust-load-balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4.0"
leaky-bucket = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
axum = "0.7"
async-trait = "0.1.80"
chrono = "0.4"
redis = "0.8.0"
futures = "0.3.30"



